Added open-source code

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           <div class="row">
               <ul>
                 <li>H:<span></span>°C  L:<span id="lowest"></span>°C</li>
-            <li>
+            <br>
+                <li>
                 Humidity: <span id="humidity"></span>%
               </li>
               <li>
@@ -125,6 +126,7 @@
 
         </div>
         </div>
+        <div id="source"><a href="https://github.com/SilvijaSvegzde/weather-app-by-Silvija" target="_blank" class="underlined">Open-source code</a> by Silvija Svegzde</div>
 
       <script src="src/index.js">
     </script>
