--- a/index.html
+++ b/index.html
@@ -65,10 +65,7 @@
               <div class="clearfix weather-temperature">
                 <img src="" alt="" class="weather-icon float-left" id="icon" />
                 <span class="temperature" id="temperature-value"></span
-                ><span class="units">
-                  <a href="#" id="celsius" class="active">°C </a> |
-                  <a href="#" id="fahrenheit">°F</a></span
-                >
+                ><span class="units"> °C </span>
               </div>
             </div>
             <div class="col-5">
