fixed the scrollbar

--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
           <br />
           <br />
 
-          <div class="weather-forecast" id="forecast"></div>
+          <div
+            class="weather-forecast container-fluid scrolling-wrapper"
+            id="forecast"
+          ></div>
+          <br />
         </div>
 
         <small>
