--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           </h1>
           <h6 id="desc"></h6>
 
-          <div class="clearfix weather-temperature">
-            <img src="" alt="" class="weather-icon float-left" id="icon" />
+          <div class="weather-temperature">
+            <img src="" alt="" class="weather-icon" id="icon" />
             <span class="temperature" id="temperature-value"></span
             ><span class="units"> °C </span>
           </div>
