--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="src/styles.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
@@ -36,31 +40,16 @@
           <h6>Last updated: <span id="currentTime"></span></h6>
 
           <form id="city-form">
-            <div class="row">
-              <div class="col-1">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="20"
-                  fill="currentColor"
-                  class="bi bi-search"
-                  viewBox="0 0 16 16"
-                >
-                  <path
-                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
-                  />
-                </svg>
-              </div>
-              <div class="col-10">
-                <input
-                  type="search"
-                  placeholder=" Type a city name..."
-                  class="form-control"
-                  id="city-input"
-                  autofocus="on"
-                  autocomplete="off"
-                />
-              </div>
+            <div class="input-container">
+              <i class="fa fa-search icon"></i>
+              <input
+                type="search"
+                placeholder="  Type a city name..."
+                class="input-field"
+                id="city-input"
+                autofocus="on"
+                autocomplete="off"
+              />
             </div>
           </form>
 
@@ -88,7 +77,11 @@
 
           <br />
 
-          <div class="weather-forecast container-fluid" id="forecast"></div>
+          <div
+            class="weather-forecast container-fluid scrolling-wrapper"
+            id="forecast"
+          ></div>
+
           <br />
         </div>
 
